fixed background 3 contrast error

--- a/week01/styles/chamber-site-plan.css
+++ b/week01/styles/chamber-site-plan.css
@@ -80,4 +80,8 @@ img {
 #typography-heading {
 	font-family: var(--font-heading);
 }
+
+#black {
+	color: black;
+}
 /* footer */
